--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 [Pp]ackages/
 APK/
 
+# Visual Studio 2015 cache/options directory
+.vs/
+# Uncomment if you have tasks that create the project's static files in wwwroot
+#wwwroot/
+
 StepCounter/obj/iPhone/AppStore/mtouch-cache/linked-assemblies.txt
 
 StepCounter/obj/iPhone/AppStore/mtouch-cache/linked-assemblies.txt
